improvement: website api docs comments are rendered with better breaks.
Before we used the built in `nl2br` filter but this filter adds line
breaks for each `\n` which does not look nice, as it breaks quite
randomly for the reader

Now we add a double `<br \>` for each `\n\n` by using a custom filter,
which makes it look more as the doc comment intends. Added a macro
called `displayComment` so every comment uses the same `code`.

Tiny doc fix: in the file `typealias.njk` the `sinceRoot` was misspelled
in the call to `displaySignatures`. This caused the link to be broken.

--- a/packages/website/src/pages/api/_includes/class.njk
+++ b/packages/website/src/pages/api/_includes/class.njk
@@ -1,4 +1,4 @@
-{% from "./macros.njk" import displaySignatures, displaySince %}
+{% from "./macros.njk" import displaySignatures, displaySince, displayComment %}
 {% from "./property.njk" import displayProperty %}
 
 {% macro classPage(def, sinceRoot) %}
@@ -65,10 +65,7 @@
 
     <p class="text-2xl font-mono mb-4 text-blue-800">CLASS</p>
 
-    <p>{{def.comment.shortText | escape | nl2br}}</p>
-    {% if def.comment.text %}
-      <p>{{def.comment.text | escape | nl2br}}</p>
-    {% endif %}
+    {{ displayComment(def) }}
 
     {{ displaySince(def, sinceRoot) }}
 
