--- a/packages/website/src/pages/api/_includes/error.njk
+++ b/packages/website/src/pages/api/_includes/error.njk
@@ -1,4 +1,4 @@
-{% from "./macros.njk" import displaySignatures, displaySince %}
+{% from "./macros.njk" import displaySignatures, displaySince, displayComment %}
 
 {% macro errorPage(def, sinceRoot) %}
   <article>
@@ -12,10 +12,7 @@
 
     <p class="text-2xl font-mono mb-4 text-red-800">ERROR</p>
 
-    <p>{{def.comment.shortText | escape | nl2br}}</p>
-    {% if def.comment.text %}
-      <p>{{def.comment.text | escape | nl2br}}</p>
-    {% endif %}
+    {{ displayComment(def) }}
 
     {{ displaySince(def, sinceRoot) }}
 
