--- a/packages/website/src/pages/api/vue/_includes/component.njk
+++ b/packages/website/src/pages/api/vue/_includes/component.njk
@@ -1,4 +1,4 @@
-{% from "../../_includes/macros.njk" import displayType, displaySince %}
+{% from "../../_includes/macros.njk" import displayType, displaySince, displayComment %}
 
 <article>
   <h1>
@@ -14,10 +14,7 @@
 
   <p class="text-2xl font-mono mb-4 text-red-800">COMPONENT</p>
 
-  <p>{{def.comment.shortText | escape | nl2br}}</p>
-  {% if def.comment.text %}
-    <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
-  {% endif %}
+  {{ displayComment(def) }}
 
   {{ displaySince(def, 'vue') }}
 
