--- a/packages/website/src/pages/api/vue/_includes/plugin.njk
+++ b/packages/website/src/pages/api/vue/_includes/plugin.njk
@@ -1,4 +1,4 @@
-{% from "../../_includes/macros.njk" import displaySince %}
+{% from "../../_includes/macros.njk" import displaySince, displayComment %}
 
 <article>
   <h1>
@@ -11,10 +11,7 @@
 
   <p class="text-2xl font-mono mb-4 text-purple-800">PLUGIN</p>
 
-  <p>{{def.comment.shortText | escape | nl2br}}</p>
-  {% if def.comment.text %}
-    <p class="mb-2">{{def.comment.text | escape | nl2br}}</p>
-  {% endif %}
+  {{ displayComment(def) }}
 
   {{ displaySince(def, 'vue') }}
 </article>
