docs: fixed missing doc comment in typealias.
THe problem was a displayComment being called with `def` instead of
with `type`.

--- a/packages/website/src/pages/api/_includes/typealias.njk
+++ b/packages/website/src/pages/api/_includes/typealias.njk
@@ -63,7 +63,7 @@
           </p>
         {% endif %}
 
-        {{ displayComment(def) }}
+        {{ displayComment(type) }}
 
         {{ displaySince(type, sinceRoot) }}
 
