docs: added docs for ViewChannel.
Other minor things:

  1. Moved example switcher code to main.js from active-list-concepts
     as they are now used inside of the ViewChannel docs as well.

  2. Added imports to ActiveList initialization example.

  3. Added note CSS class which creates a yellow post it note like UI
     element.

  4. Added link to usage-with-frameworks to ActiveList docs hub page.

  5. In examples.json removed tag ActiveList in favor for "for" key so
     makes it easier to filter on the component example pages.

  6. In "concept" of ActiveList removed "localhost" reference in link.

--- a/packages/website/src/pages/docs/active-list/concept.njk
+++ b/packages/website/src/pages/docs/active-list/concept.njk
@@ -140,7 +140,7 @@ renderData:
   <p>
     When using reactive frameworks such as React, Vue, Angular or Svelte etc etc. 
     The subscriber is not necessary since your framework of choice will do the 
-    heavy lifting of syncing the state of the ActiveList with the DOM. For more information see <a href="http://localhost:8082/docs/active-list/usage-with-frameworks/" class="underline">"Usage with Framework"</a>
+    heavy lifting of syncing the state of the ActiveList with the DOM. For more information see <a href="/docs/active-list/usage-with-frameworks/" class="underline">"Usage with Framework"</a>
   </p>
 
   {% include './concepts/initialization.njk' %}
@@ -513,8 +513,8 @@ renderData:
     items there is no next item.
   </p>
 
-  <p>
-    NOTE: autoPlay will stop oif all content is removed whilst the ActiveList is
+  <p class="note">
+    That autoPlay will stop if all content is removed whilst the ActiveList is
     playing.
   </p>
 
