--- a/packages/website/src/pages/docs/active-list/tutorial.njk
+++ b/packages/website/src/pages/docs/active-list/tutorial.njk
@@ -50,8 +50,8 @@ renderData:
     has to offer.
   </p>
 
-   <p>
-    NOTE: that we are using vanilla JavaScript which requires us to
+   <p class="note">
+    That we are using vanilla JavaScript which requires us to
     write our own DOM manipulation inside of a subscriber. When using
     a reactive framework such as Svelte or Vue, this is not necessary,
     as these frameworks handle synchronizing with the DOM for us.
@@ -632,7 +632,7 @@ const config = {
   >
     <div>
       <div class="text-normal font-medium mb-1">Usage with Frameworks</div>
-      <div class="text-sm">Learn how to use the ActiveList in combination with framework such as React and Vue.</div>
+      <div class="text-sm">Learn how to use the ActiveList in combination with frameworks such as React and Vue.</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
