--- a/packages/website/src/pages/docs/view-channel/view-channel.njk
+++ b/packages/website/src/pages/docs/view-channel/view-channel.njk
@@ -1,14 +1,14 @@
 ---
-title: ActiveList | Docs | uiloos
+title: ViewChannel | Docs | uiloos
 layout: layouts/docs.njk
-permalink: /docs/active-list/
+permalink: /docs/view-channel/
 ---
 
 <article>
-  <h1>ActiveList</h1>
+  <h1>ViewChannel</h1>
 
   <p>
-    Welcome to the documentation hub of the ActiveList.
+    Welcome to the documentation hub of the ViewChannel.
   </p>
 
   <a 
@@ -17,7 +17,7 @@ permalink: /docs/active-list/
   >
     <div>
       <div class="text-normal font-medium mb-1">Concept</div>
-      <div class="text-sm">Learn the concepts behind the ActiveList</div>
+      <div class="text-sm">Learn the concepts behind the ViewChannel</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -30,7 +30,7 @@ permalink: /docs/active-list/
   >
     <div>
       <div class="text-normal font-medium mb-1">Tutorial</div>
-      <div class="text-sm">Take the tutorial and build a carousel</div>
+      <div class="text-sm">Take the tutorial and build a notification center</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -43,7 +43,7 @@ permalink: /docs/active-list/
   >
     <div>
       <div class="text-normal font-medium mb-1">Usage with Frameworks</div>
-      <div class="text-sm">Learn how to use the ActiveList in combination with frameworks such as React, Vue and Angular</div>
+      <div class="text-sm">Learn how to use the ViewChannel in combination with frameworks such as React, Vue and Angular</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
@@ -56,7 +56,7 @@ permalink: /docs/active-list/
   >
     <div>
       <div class="text-normal font-medium mb-1">Examples</div>
-      <div class="text-sm">View some examples of the ActiveList in action</div>
+      <div class="text-sm">View some examples of the ViewChannel in action</div>
     </div>
     <svg class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
       <path d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"></path>
