--- a/packages/website/src/styles/additional-styles/utility-patterns.scss
+++ b/packages/website/src/styles/additional-styles/utility-patterns.scss
@@ -107,3 +107,13 @@ p {
 details {
   cursor: pointer;
 }
+
+.note {
+  @apply bg-yellow-200 px-4 py-4 border-yellow-500 border-l-8 
+}
+
+.note::before{
+  content: 'Note';
+  display: block;
+  font-weight: bold;
+}
