website: now providing avif images for the owls, headings descend now.

--- a/packages/website/src/_includes/components/footer.njk
+++ b/packages/website/src/_includes/components/footer.njk
@@ -10,7 +10,7 @@
       </div>
 
       <div class="sm:col-span-6 md:col-span-4 text-center md:text-left">
-        <h6 class="text-gray-800 font-medium mb-2">Resources</h6>
+        <h2 class="text-gray-800 font-medium text-xl mb-2">Resources</h2>
         <ul class="text-sm">
           <li class="mb-2">
             <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="/docs">Docs</a>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="sm:col-span-6 md:col-span-4 text-center md:text-left">
-        <h6 class="text-gray-800 font-medium mb-2">Company</h6>
+        <h2 class="text-gray-800 font-medium text-xl mb-2">Company</h2>
         <ul class="text-sm">
           <li class="mb-2">
             <a class="text-gray-600 hover:text-gray-900 transition duration-150 ease-in-out" href="#0">Home</a>
