--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -212,9 +212,12 @@ permalink: /
           id="carousel-slide-0"
           class="visible absolute"
         >
-          <img width="1920" height="1280" src="/images/owls/snow.jpg" alt="image of a snow owl" />
+          <picture>
+            <source type="image/avif" srcset="/images/owls/snow.avif">
+            <img width="1920" height="1280" src="/images/owls/snow.jpg" alt="image of a snow owl" />
+          </picture>
           <article class="p-4">
-            <h4 class="font-bold">Snow owl</h4>
+            <h3 class="font-bold">Snow owl</h3>
             <p>
               The snowy owl (Bubo scandiacus), also known as the polar owl, 
               the white owl and the Arctic owl, is a large, white owl of the true owl family. 
@@ -229,9 +232,12 @@ permalink: /
           class="invisible absolute"
           aria-hidden="true"
         >
-          <img width="1920" height="1280" src="/images/owls/tawny.jpg" alt="image of a tawny owl" />
+          <picture>
+            <source type="image/avif" srcset="/images/owls/tawny.avif">
+             <img width="1920" height="1280" src="/images/owls/tawny.jpg" alt="image of a snow owl" />
+          </picture>
           <article class="p-4">
-            <h4 class="font-bold">Tawny owl</h4>
+            <h3 class="font-bold">Tawny owl</h3>
             <p>
               The tawny owl (also called the brown owl; Strix aluco) is commonly found in woodlands 
               across much of Eurasia and North Africa, and has 11 recognized subspecies. 
@@ -244,9 +250,12 @@ permalink: /
           class="invisible absolute"
           aria-hidden="true"
         >
-          <img width="1920" height="1280" src="/images/owls/barn.jpg" alt="image of a barn owl" />
+          <picture>
+            <source type="image/avif" srcset="/images/owls/barn.avif">
+             <img width="1920" height="1280" src="/images/owls/barn.jpg" alt="image of a barn owl" />
+          </picture>
           <article class="p-4">
-            <h4 class="font-bold">Barn owl</h4>
+            <h3 class="font-bold">Barn owl</h3>
             <p>
               The barn owl (Tyto alba) is the most widely distributed species of owl in the world and 
               one of the most widespread of all species of birds, being found almost everywhere in the
@@ -260,9 +269,12 @@ permalink: /
           class="invisible absolute"
           aria-hidden="true"
         >
-          <img width="1920" height="1280" src="/images/owls/burrowing.jpg" alt="image of a burrowing owl" />
+          <picture>
+            <source type="image/avif" srcset="/images/owls/burrowing.avif">
+            <img width="1920" height="1280" src="/images/owls/burrowing.jpg" alt="image of a burrowing owl" />
+          </picture>
           <article class="p-4">
-            <h4 class="font-bold">Burrowing owl</h4>
+            <h3 class="font-bold">Burrowing owl</h3>
             <p>
               The burrowing owl (Athene cunicularia) is a small, long-legged owl. 
               Burrowing owls nest and roost in burrows, such as 
@@ -276,9 +288,12 @@ permalink: /
           class="invisible absolute"
           aria-hidden="true"
         >
-          <img src="/images/owls/hawk.jpg" alt="image of a northern hawk-owl" />
+          <picture>
+            <source type="image/avif" srcset="/images/owls/hawk.avif">
+            <img width="1920" height="1280" src="/images/owls/hawk.jpg" alt="image of a northern hawk-owl" />
+          </picture>
           <article class="p-4 bg-purple-800">
-            <h4 class="font-bold ">Northern hawk-owl</h4>
+            <h3 class="font-bold ">Northern hawk-owl</h3>
             <p>
               The northern hawk-owl or northern hawk owl (Surnia ulula) is a medium-sized true owl of 
               the northern latitudes. It is one of the few owls that is neither nocturnal 
@@ -375,21 +390,21 @@ permalink: /
     <!-- 1st item -->
     <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
       <img src="/images/frameworks/react.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="React logo" />
-      <h4 class="font-bold leading-snug tracking-tight mb-1">React</h4>
+      <h3 class="font-bold leading-snug tracking-tight mb-1">React</h3>
       <p class="text-gray-800 text-center">Use ready made React components and hooks.</p>
     </div>
 
     <!-- 2nd item -->
     <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
       <img src="/images/frameworks/vue.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="Vue logo"/>
-      <h4 class="font-bold leading-snug tracking-tight mb-1">Vue</h4>
+      <h3 class="font-bold leading-snug tracking-tight mb-1">Vue</h3>
       <p class="text-gray-800 text-center">Use pre-baked Vue components and composables.</p>
     </div>
 
     <!-- 3rd item -->
     <div class="relative flex flex-col items-center p-6 bg-white rounded shadow-xl h-full">
       <img src="/images/frameworks/vanilla.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
-      <h4 class="font-bold leading-snug tracking-tight mb-1">Vanilla</h4>
+      <h3 class="font-bold leading-snug tracking-tight mb-1">Vanilla</h3>
       <p class="text-gray-800 text-center">Or use no framework at all and listen to changes yourself</p>
     </div>
   </div>
