--- a/packages/website/src/_includes/layouts/base.njk
+++ b/packages/website/src/_includes/layouts/base.njk
@@ -7,6 +7,8 @@
     <link rel="icon" href="/images/favicon.png" sizes="any">
     <!-- 32×32 -->
     <link rel="icon" href="/images/icon.svg" type="image/svg+xml">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body class="font-inter antialiased bg-white text-gray-900 tracking-tight flex flex-col min-h-screen">
