--- a/packages/website/src/styles/additional-styles/fonts.scss
+++ b/packages/website/src/styles/additional-styles/fonts.scss
@@ -5,11 +5,18 @@
   font-weight: 400;
   src: url('../fonts/maven/maven-pro-v28-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/maven/maven-pro-v28-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/maven/maven-pro-v28-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/maven/maven-pro-v28-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/maven/maven-pro-v28-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/maven/maven-pro-v28-latin-regular.svg#MavenPro') format('svg'); /* Legacy iOS */
+    url('../fonts/maven/maven-pro-v28-latin-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/maven/maven-pro-v28-latin-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../fonts/maven/maven-pro-v28-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/maven/maven-pro-v28-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/maven/maven-pro-v28-latin-regular.svg#MavenPro')
+      format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 
 /* inter-regular - latin */
@@ -19,11 +26,17 @@
   font-weight: 400;
   src: url('../fonts/inter/inter-v8-latin-regular.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/inter/inter-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
+    url('../fonts/inter/inter-v8-latin-regular.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter/inter-v8-latin-regular.woff2')
+      format('woff2'),
+    /* Super Modern Browsers */
+      url('../fonts/inter/inter-v8-latin-regular.woff') format('woff'),
+    /* Modern Browsers */ url('../fonts/inter/inter-v8-latin-regular.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter/inter-v8-latin-regular.svg#Inter') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* inter-500 - latin */
 @font-face {
@@ -32,11 +45,16 @@
   font-weight: 500;
   src: url('../fonts/inter/inter-v8-latin-500.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/inter/inter-v8-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-500.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-500.svg#Inter') format('svg'); /* Legacy iOS */
+    url('../fonts/inter/inter-v8-latin-500.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter/inter-v8-latin-500.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter/inter-v8-latin-500.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter/inter-v8-latin-500.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter/inter-v8-latin-500.svg#Inter') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* inter-700 - latin */
 @font-face {
@@ -45,11 +63,16 @@
   font-weight: 700;
   src: url('../fonts/inter/inter-v8-latin-700.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/inter/inter-v8-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-700.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-700.svg#Inter') format('svg'); /* Legacy iOS */
+    url('../fonts/inter/inter-v8-latin-700.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter/inter-v8-latin-700.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter/inter-v8-latin-700.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter/inter-v8-latin-700.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter/inter-v8-latin-700.svg#Inter') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* inter-800 - latin */
 @font-face {
@@ -58,11 +81,16 @@
   font-weight: 800;
   src: url('../fonts/inter/inter-v8-latin-800.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/inter/inter-v8-latin-800.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-800.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-800.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-800.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-800.svg#Inter') format('svg'); /* Legacy iOS */
+    url('../fonts/inter/inter-v8-latin-800.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter/inter-v8-latin-800.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter/inter-v8-latin-800.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter/inter-v8-latin-800.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter/inter-v8-latin-800.svg#Inter') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 /* inter-900 - latin */
 @font-face {
@@ -71,11 +99,16 @@
   font-weight: 900;
   src: url('../fonts/inter/inter-v8-latin-900.eot'); /* IE9 Compat Modes */
   src: local(''),
-       url('../fonts/inter/inter-v8-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('../fonts/inter/inter-v8-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-900.woff') format('woff'), /* Modern Browsers */
-       url('../fonts/inter/inter-v8-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('../fonts/inter/inter-v8-latin-900.svg#Inter') format('svg'); /* Legacy iOS */
+    url('../fonts/inter/inter-v8-latin-900.eot?#iefix')
+      format('embedded-opentype'),
+    /* IE6-IE8 */ url('../fonts/inter/inter-v8-latin-900.woff2') format('woff2'),
+    /* Super Modern Browsers */ url('../fonts/inter/inter-v8-latin-900.woff')
+      format('woff'),
+    /* Modern Browsers */ url('../fonts/inter/inter-v8-latin-900.ttf')
+      format('truetype'),
+    /* Safari, Android, iOS */
+      url('../fonts/inter/inter-v8-latin-900.svg#Inter') format('svg'); /* Legacy iOS */
+  font-display: swap;
 }
 
 .maven {
