website: removed aos which provides scroll into view animations
The animations in my opinion were not worth the extra bundle size in
JavaScript. Also these types of animations in my humble opinion always
make me feel the page is slower than it actually is.

--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -24,12 +24,12 @@ permalink: /
   </div>
 
   <div class="max-w-6xl mx-auto px-4 sm:px-6 pt-32 mb-8 text-center">  
-    <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4" data-aos="zoom-y-out">uiloos makes creating component libraries <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">easier and faster</span></h1>
+    <h1 class="text-5xl md:text-6xl font-extrabold leading-tighter tracking-tighter mb-4">uiloos makes creating component libraries <span class="bg-clip-text text-transparent bg-gradient-to-r from-purple-500 to-orange-600">easier and faster</span></h1>
     <div class="max-w-3xl mx-auto">
-      <p class="text-2xl text-gray-800 mb-8" data-aos="zoom-y-out" data-aos-delay="150">
+      <p class="text-2xl text-gray-800 mb-8">
         uiloos is a headless UI library which provides common components without any styling. You create the design and "uiloos" provides the behavior.
       </p>
-      <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center" data-aos="zoom-y-out" data-aos-delay="300">
+      <div class="max-w-xs mx-auto sm:max-w-none sm:flex sm:justify-center">
         <div>
           <a class="btn text-white bg-purple-600 hover:bg-purple-700 w-full mb-4 sm:w-auto sm:mb-0" href="/docs/getting-started/installation/">Getting started</a>
         </div>
@@ -42,7 +42,7 @@ permalink: /
 
   <!-- Hero image -->
   {# <div x-data="{ modalExpanded: false }">
-    <div class="relative flex justify-center mb-16" data-aos="zoom-y-out" data-aos-delay="450">
+    <div class="relative flex justify-center mb-16">
       <div class="flex flex-col justify-center">
         <iframe id='video' width="768" height="432" src="https://www.youtube-nocookie.com/embed/bl5TUw7sUBs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
@@ -424,7 +424,7 @@ permalink: /
     <div class="grid gap-12 md:grid-cols-3 md:gap-x-6 md:gap-y-8 items-start">
 
         <!-- developers -->
-      <div class="flex flex-col h-full" data-aos="zoom-y-out" data-aos-delay="150">
+      <div class="flex flex-col h-full">
         <a class="block mb-6" href="/letters/to-developers/">
           <figure class="relative h-0 pb-9/16 overflow-hidden translate-z-0 rounded">
             <img class="absolute inset-0 w-full h-full transform scale-105 translate-z-0 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/developer.svg" alt="A developer" loading="lazy"/>
@@ -437,7 +437,7 @@ permalink: /
       </div>
 
       <!-- designers -->
-      <div class="flex flex-col h-full" data-aos="zoom-y-out">
+      <div class="flex flex-col h-full">
         <a class="block mb-6" href="/letters/to-designers/">
           <figure class="relative h-0 pb-9/16 overflow-hidden translate-z-0 rounded">
             <img class="absolute inset-0 w-full h-full transform scale-105 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/designer.svg" alt="a graphical designer" loading="lazy"/>
@@ -450,7 +450,7 @@ permalink: /
       </div> 
 
       <!-- managers -->
-      <div class="flex flex-col h-full" data-aos="zoom-y-out" data-aos-delay="300">
+      <div class="flex flex-col h-full">
         <a class="block mb-6" href="/letters/to-managers/">
           <figure class="relative h-0 pb-9/16 overflow-hidden translate-z-0 rounded">
             <img class="absolute inset-0 w-full h-full transform scale-105 translate-z-0 hover:-translate-y-1 transition duration-500 ease-out" src="/images/avatars/manager.svg" alt="a manager" loading="lazy"/>
@@ -468,7 +468,7 @@ permalink: /
 </section>
 
 {# CTA #}
-<section class="max-w-6xl mx-auto px-4 sm:px-6 mb-16 bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl" data-aos="zoom-y-out">
+<section class="max-w-6xl mx-auto px-4 sm:px-6 mb-16 bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl">
   
   <!-- CTA box -->
   <div class="flex flex-col lg:flex-row justify-between items-center">
