--- a/packages/website/src/pages/letters/to-designers.njk
+++ b/packages/website/src/pages/letters/to-designers.njk
@@ -78,7 +78,7 @@ permalink: /letters/to-designers/
 <section>
   <div class="max-w-6xl mx-auto px-4 sm:px-6 mb-16">
     <!-- CTA box -->
-    <div class="bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl" data-aos="zoom-y-out">
+    <div class="bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl">
 
       <div class="flex flex-col lg:flex-row justify-between items-center">
 
