--- a/packages/website/src/pages/pricing/pricing.njk
+++ b/packages/website/src/pages/pricing/pricing.njk
@@ -10,15 +10,15 @@ eleventyNavigation:
 <section class="bg-gradient-to-b from-white to-gray-100 text-lg max-w-6xl mx-auto px-4 sm:px-6 pt-32 pb-12 md:pt-40 md:pb-20">
   <!-- Section header -->
   <div class="max-w-3xl mx-auto text-center pb-12">
-    <h1 data-aos="zoom-y-out">Pricing</h1>
-    <p class="text-2xl text-gray-600" data-aos="zoom-y-out" data-aos-delay="150">Our pricing is based on the number of developers using uiloos.</p>
+    <h1>Pricing</h1>
+    <p class="text-2xl text-gray-600">Our pricing is based on the number of developers using uiloos.</p>
   </div>
 
   <!-- Pricing tables -->
   <div x-data="pricingSwitch">
 
     <!-- Pricing toggle -->
-    <div class="flex justify-center max-w-xs m-auto mb-16" data-aos="zoom-y-out" data-aos-delay="300">
+    <div class="flex justify-center max-w-xs m-auto mb-16">
       <div class="relative flex w-full mx-6 p-1 bg-gray-200 rounded">
         <span class="absolute inset-0 m-1 pointer-events-none" aria-hidden="true">
           <span class="absolute inset-0 w-1/2 bg-white rounded shadow transform transition duration-150 ease-in-out" :class="value ? 'translate-x-0' : 'translate-x-full'"></span>
@@ -43,7 +43,7 @@ eleventyNavigation:
     <div class="mx-auto grid gap-2 lg:grid-cols-3 xl:gap-4 items-start">
 
         <!-- Pricing Free -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl" data-aos="zoom-y-out" data-aos-delay="450">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
         <div class="mb-4">
           <div class="text-lg font-bold mb-1">Evaluation / Personal use</div>
           <div class="inline-flex items-baseline mb-2">
@@ -84,7 +84,7 @@ eleventyNavigation:
       </div>
 
       <!-- Pricing Standard -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl" data-aos="zoom-y-out" data-aos-delay="450">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
         <div class="mb-4">
           <div class="text-lg font-bold mb-1">Standard</div>
           <div class="inline-flex items-baseline mb-2">
@@ -133,7 +133,7 @@ eleventyNavigation:
       </div>
 
       <!-- Pricing Enterprise -->
-      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl" data-aos="zoom-y-out" data-aos-delay="450">
+      <div class="relative flex flex-col h-full py-5 px-6 rounded bg-white shadow-xl">
         <div class="absolute top-0 right-0 mr-5 p-3 -mt-5 bg-yellow-500 rounded-full">
           <svg class="w-4 h-4 fill-current text-white" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
             <path d="M15.145 5.05l-4.316-.627L8.898.513c-.338-.684-1.456-.684-1.794 0l-1.93 3.91-4.317.627a1.002 1.002 0 00-.554 1.707l3.124 3.044-.737 4.3a1 1 0 001.45 1.053L8 13.125l3.862 2.03c.728.381 1.59-.234 1.45-1.054l-.736-4.299L15.7 6.758a1.003 1.003 0 00-.555-1.708z"/>
